system/automation/n8n/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: automation
  labels:
    app: n8n
    version: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
        version: v1.0
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      nodeSelector:
        kubernetes.io/hostname: mlops-work-00
      containers:
        - name: n8n
          image: ghcr.io/n8n-io/n8n:1.76.0
          ports:
            - containerPort: 5678
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 150m
              memory: 512Mi
            limits:
              cpu: 550m
              memory: 768Mi
          volumeMounts:
            - name: credentials
              mountPath: /backup/credentials
            - name: workflows
              mountPath: /backup/workflows
            # - name: n8n-storage
            #   mountPath: /home/node/.n8n
            # - name: shared-data
            #   mountPath: /data/shared
      volumes:
        - name: credentials
          configMap:
            name: credentials-cm
        - name: workflows
          configMap:
            name: workflows-cm
        # - name: n8n-storage
        #   persistentVolumeClaim:
        #     claimName: n8n-storage-pvc
        # - name: workflows
        #   persistentVolumeClaim:
        #     claimName: n8n-storage-workflows-pvc
        # - name: shared-data
        #   persistentVolumeClaim:
        #     claimName: n8n-storage-shared-pvc
