system/automation/n8n/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: automation
  labels:
    version: v1.0
spec:
  type: LoadBalancer
  selector:
    app: n8n
  ports:
  - port: 5678
    name: http-5678
    protocol: TCP
    targetPort: 5678
