system/automation/n8n/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-service-ingress
  namespace: automation
  annotations:
    external-dns.alpha.kubernetes.io/hostname: workflows.local
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: workflows.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 5678
